<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_lesson">


    <fragment
        android:label="@string/menu_lesson"
        android:id="@+id/nav_lesson"
        tools:layout="@layout/fragment_lesson"
        android:name="com.qazstudy.ui.fragment.FragmentLesson">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_lesson_second" />
    </fragment>

    <fragment
        android:label="@string/home_second"
        android:id="@+id/nav_lesson_second"
        tools:layout="@layout/fragment_lesson"
        android:name="com.qazstudy.ui.fragment.FragmentLesson">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_lesson" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:label="@string/menu_book"
        android:id="@+id/nav_book"
        tools:layout="@layout/fragment_book"
        android:name="com.qazstudy.ui.fragment.FragmentBook" />

    <fragment
        android:label="@string/menu_dictionary"
        android:id="@+id/nav_dictionary"
        tools:layout="@layout/fragment_dictionary"
        android:name="com.qazstudy.ui.fragment.FragmentDictionary" />

    <fragment
        android:label="@string/menu_task"
        android:id="@+id/nav_task"
        tools:layout="@layout/fragment_task"
        android:name="com.qazstudy.ui.fragment.FragmentTask" />

    <fragment
        android:label="@string/menu_bookmark"
        android:id="@+id/nav_bookmark"
        tools:layout="@layout/fragment_bookmark"
        android:name="com.qazstudy.ui.fragment.FragmentBookmark" />

    <fragment
        android:id="@+id/nav_setting"
        tools:layout="@layout/fragment_setting"
        android:label="@string/title_activity_setting"
        android:name="com.qazstudy.ui.fragment.FragmentSetting" />


</navigation>