<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lesson"
            android:icon="@drawable/ic_menu_lesson"
            android:title="@string/menu_lesson" />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/menu_task" />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_menu_bookmark"
            android:title="@string/menu_bookmark" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/action_settings" />
    </group>
</menu>
