<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="75dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_register__title"
        android:text="@string/enter_name_and_password"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:padding="10dp"
        android:inputType="text"
        android:autofillHints="no"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_register__input_name"
        android:background="@drawable/bg_btn_exit_light"
        android:hint="@string/activity_profile__hint_name"
        app:layout_constraintTop_toBottomOf="@id/fragment_register__title"/>

    <EditText
        android:padding="10dp"
        android:autofillHints="no"
        android:layout_margin="15dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_exit_light"
        android:id="@+id/fragment_register__input_password"
        android:hint="@string/activity_profile__hint_password"
        app:layout_constraintTop_toBottomOf="@id/fragment_register__input_name"/>

    <EditText
        android:padding="10dp"
        android:autofillHints="no"
        android:layout_margin="15dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_exit_light"
        android:id="@+id/fragment_register__input_password_repeat"
        android:hint="@string/activity_profile__hint_password_repeat"
        app:layout_constraintTop_toBottomOf="@id/fragment_register__input_password"/>

    <Button
        android:text="@string/register"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/btn_login_color"
        android:background="@drawable/btn_login_bg"
        android:id="@+id/activity_register__btn_register"
        android:stateListAnimator="@animator/btn_login_animator"
        app:layout_constraintTop_toBottomOf="@id/fragment_register__input_password_repeat"/>

</androidx.constraintlayout.widget.ConstraintLayout>