<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ActivityProfile"
    android:id="@+id/activity_profile__constraint_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_profile__toolbar"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:onClick="onClick"
            android:padding="14dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_back"
            android:id="@+id/activity_profile__ic_back"
            android:contentDescription="@string/activity_profile__ic_back_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_profile__title"
            android:id="@+id/activity_profile__toolbar_txt"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/activity_profile__ic_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/activity_profile__toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/activity_profile__image_profile"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginTop="25dp"
                android:onClick="onClick"
                android:src="@drawable/ic_avatar_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/activity_profile__input_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_input_login"
                android:hint="@string/activity_profile__hint_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/activity_profile__image_profile"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/activity_profile__input_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_input_login"
                android:hint="@string/activity_profile__hint_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/activity_profile__input_name"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/activity_profile__input_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_input_login"
                android:hint="@string/activity_profile__hint_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/activity_profile__input_email"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/activity_profile__input_country"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_input_login"
                android:hint="@string/activity_profile__hint_country"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/activity_profile__input_password"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/activity_profile__input_city"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_input_login"
                android:hint="@string/activity_profile__hint_city"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/activity_profile__input_country"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/activity_profile__btn_exit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_btn_exit_light"
                android:onClick="onClick"
                android:text="@string/activity_profile__btn_exit"
                android:textAllCaps="false"
                android:textColor="@color/exit_button_text"
                app:layout_constraintTop_toBottomOf="@id/activity_profile__input_city" />

            <Button
                android:id="@+id/activity_profile__btn_delete"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_btn_delete_account_light"
                android:onClick="onClick"
                android:text="@string/activity_profile__btn_delete"
                android:textAllCaps="false"
                android:textColor="@color/delete_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_profile__btn_exit" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>